# show-your-work

./: .gitignore  .pre-commit-config.yaml  0 - IntroPython.ipynb  0 - IntroR.ipynb  1 - CenterSpreadPython.ipynb  1 - CenterSpreadR.ipynb  1 - SpatialAnalysesPython.ipynb  1 - TimeSeriesPython.ipynb  1 - TimeSeriesR.ipynb  CHR_data25.ipynb  CITATION  F_ma_lab_notebook.ipynb  IntroPython.ipynb  IntroR.ipynb  LICENSE  README.md  check_notebook_outputs.py  county_code_temporary.py  engine.ipynb  logging.R  logging.py  pyproject.toml  requirements.txt  spatial.css  template.ipynb  variable_definitions.md
.github/workflows/: clean_notebooks.yml
data/: california_hospitals.csv  car_safety_data_nona.csv  chr_2019_data.csv  chr_2025_data.csv  sept2020.csv  state_2019_map_data.dbf  state_2025_map_data.dbf
data/life_expectancy/: ca_county.dbf  ca_county.shp  ca_county.shx  ca_hospital_counts.csv  ca_long_lat_points.csv  catalina_long_lat_points.csv  most_and_minimum_ca_hospitals.csv  state_2025_map_data.dbf  state_2025_map_data.shp  state_2025_map_data.shx
intro/: IntroPython.ipynb  IntroR.ipynb
src/show_your_work/: __init__.py
timeseries/: TimeSeriesPython.ipynb  baaqmd_data.csv
workflows/: clean_notebooks.yml
