[project]
name = "show-your-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.2",
    "great-tables>=0.20.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "plotnine>=0.15.2",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.8",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "streamlit>=1.53.0",
    "streamlit-jupyter>=0.3.1",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
